--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        ref: feature/workflows-convert
 
     - name: Install dependencies
       run: cd tool && composer install --prefer-dist --no-progress --no-suggest && cd ..
@@ -22,14 +24,6 @@ jobs:
         git config --global user.email ${{secrets.EMAIL}}
         git config --global user.name ${{secrets.NAME}}
     
-    # テスト用
-    - name: Git fetch
-      run: git fetch --prune
-
-    # テスト用
-    - name: Git checkout
-      run: git checkout -b feature/workflows-convert origin/feature/workflows-convert
-
     - name: Convert
       run: bash ./bin/download_data.sh
 
