--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -22,8 +22,8 @@ jobs:
 
     - name: Git config
       run: |
-        git config --global user.email ${{secrets.EMAIL}}
-        git config --global user.name ${{secrets.NAME}}
+        git config --local user.email ${{secrets.EMAIL}}
+        git config --local user.name ${{secrets.NAME}}
     
     - name: Convert
       run: bash ./bin/download_data.sh
