--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -2,7 +2,7 @@ name: convert
 
 on:
   schedule:
-    - cron: 0 23 * * *
+    - cron: '0 3 * * *'
 
 env:
   TZ: Asia/Tokyo
@@ -19,17 +19,14 @@ jobs:
 
     - name: Install dependencies
       run: cd tool && composer install --prefer-dist --no-progress --no-suggest && cd ..
-
-    - name: Git config
-      run: |
-        git config --local user.email ${{secrets.EMAIL}}
-        git config --local user.name ${{secrets.NAME}}
     
     - name: Convert
       run: bash ./bin/download_data.sh
  
     - name: Git add & commit
       run: |
+        git config --local user.email ${{secrets.EMAIL}}
+        git config --local user.name ${{secrets.NAME}}
         git status | grep "modified:   data/data.json" && git add data/data.json \
           && git commit -m "update data.json: `date +'%Y-%m-%d %H:%M:%S'`"
 
