--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -16,10 +16,10 @@ jobs:
 
     - name: Install dependencies
       run: cd tool && composer install --prefer-dist --no-progress --no-suggest && cd ..
-    
+
     - name: Convert
       run: bash ./bin/download_data.sh
- 
+
     - name: Git add & commit
       run: |
         git config --local user.email "${{ secrets.EMAIL }}"
@@ -30,5 +30,5 @@ jobs:
     - name: Git push
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.PUSH_TOKEN }}
         branch: development
