テストのため、毎時実行に変更

--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -2,7 +2,7 @@ name: convert
 
 on:
   schedule:
-    - cron: '0 14 * * *'
+    - cron: '0 * * * *'
 
 env:
   TZ: Asia/Tokyo
@@ -27,7 +27,7 @@ jobs:
         git status | grep "modified:   data/data.json" && git add data/data.json \
           && git commit -m "update data.json: `date +'%Y-%m-%d %H:%M:%S'`"
 
-    - name: Set update data date
+    - name: Set variables
       id: update_data
       run: |
         date=$(date +'%m/%d')
