--- a/.github/workflows/convert.yml
+++ b/.github/workflows/convert.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - uses: shivammathur/setup-php@2.9.0
+      with:
+        php-version: '7.4' 
+
     - name: Install dependencies
       run: cd tool && composer install --prefer-dist --no-progress --no-suggest && cd ..
 
