--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "covid19",
   "version": "1.0.0",
-  "description": "東京都 新型コロナウイルス感染症対策サイト",
-  "author": "東京都",
+  "description": "千葉市新型コロナウイルス感染症対策サイト",
+  "author": "NPO法人Code for Chiba",
   "private": true,
   "engines": {
     "node": ">=10.19.0"
@@ -15,8 +15,7 @@
     "generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
     "lint-and-generate": "eslint './**/*.{js,ts,vue}' && nuxt-ts generate",
     "test": "echo 'skip tests (there is no test)'",
-    "lint": "eslint './**/*.{js,ts,vue}' --fix",
-    "clean-hardsource": "rimraf ./node_modules/.cache/hard-source"
+    "lint": "eslint './**/*.{js,ts,vue}'"
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
