--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "vue-chartjs": "^3.5.0",
     "vue-property-decorator": "^8.4.0",
     "vue-scrollto": "^2.17.1",
-    "vue-spinner": "^1.0.3"
+    "vue-spinner": "^1.0.3",
+    "vuetify": "^2.4.2"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
