--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,7 @@ updates:
   directory: "/"
   schedule:
     interval: daily
-    time: "20:00"
+    time: "08:00"
+    timezone: "Asia/Tokyo"
   open-pull-requests-limit: 10
   target-branch: development
