--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -13,11 +13,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup python and Run
+      - name: Setup python
         uses: actions/setup-python@v2
         with:
           python-version: '3.6.9'
           architecture: x64
+
+      - name: Convert    
         run: cd tool && jupyter nbconvert --to notebook --execute --inplace make_monorail_json.ipynb && cd ..
 
       - name: Git add & commit
