--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -18,7 +18,7 @@ jobs:
           architecture: x64
 
       - name: Setup Jupyter lab    
-        run: pip install jupyterlab
+        run: pip install -r tool/requirements.txt
 
       - name: Convert    
         run: cd tool && jupyter nbconvert --to notebook --execute --inplace make_monorail_json.ipynb && cd ..
