--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -32,6 +32,7 @@ jobs:
           git status | grep "modified:   data/monorail.json" && git add data/monorail.json \
             && git commit -m "update monorail.json: `date +'%Y-%m-%d %H:%M:%S'`"
           git checkout .
+          git clean -f
 
       - name: Set variables
         id: update_data
