--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -1,7 +1,10 @@
 name: Renew monorail data
 
-on: workflow_dispatch
-
+on:
+  workflow_dispatch:
+    inputs: pullRequestNumber
+    description: Pull request number to auto-approve
+    required: false
 env:
   TZ: Asia/Tokyo
 
@@ -50,7 +53,7 @@ jobs:
         uses: hmarr/auto-approve-action@v2
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          pull-request-number: ${{ github.event.client_payload.PullRequestNumber }}
+          pull_number: ${{ github.event.client_payload.PullRequestNumber }}
 
       - name: Auto Merge
         uses: pascalgn/automerge-action@v0.14.2
