--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -1,9 +1,8 @@
 name: Renew monorail data
 
 on:
-  schedule:
-    - cron: '* * * * *'
-
+  workflow_dispatch
+  
 env:
   TZ: Asia/Tokyo
 
@@ -55,7 +54,7 @@ jobs:
           pull-request-number: ${{ env.PULL_REQUEST_NUMBER }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: Auto Merge
         uses: pascalgn/automerge-action@v0.14.2
         env:
