--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -2,7 +2,7 @@ name: Renew monorail data
 
 on:
   workflow_dispatch
-  
+
 env:
   TZ: Asia/Tokyo
 
@@ -49,11 +49,11 @@ jobs:
 
       - name: Auto Approve
         uses: hmarr/auto-approve-action@v2
+        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           pull-request-number: ${{ env.PULL_REQUEST_NUMBER }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Auto Merge
         uses: pascalgn/automerge-action@v0.14.2
