--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -1,7 +1,9 @@
 name: Renew monorail data
 
 on:
-  workflow_dispatch
+  workflow_dispatch:
+  schedule:
+  - cron: '20 * * * *'
 
 env:
   TZ: Asia/Tokyo
