--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -61,6 +61,13 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MERGE_DELETE_BRANCH: true
 
+      - name: Merge Pull Request
+        uses: juliangruber/merge-pull-request-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          number: 1
+          method: squash
+
       - name: Notify to slack
         uses: 8398a7/action-slack@v3
         with:
