--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -65,7 +65,7 @@ jobs:
         uses: juliangruber/merge-pull-request-action@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          number: 1
+          number: ${{env.PULL_REQUEST_NUMBER}}
           method: squash
 
       - name: Notify to slack
