--- a/.github/workflows/convert_monorail.yml
+++ b/.github/workflows/convert_monorail.yml
@@ -22,7 +22,7 @@ jobs:
           architecture: x64
 
       - name: Setup Jupyter lab    
-        run: pip install -r tool/requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Convert    
         run: cd tool && jupyter nbconvert --to notebook --execute --inplace make_monorail_json.ipynb && mv monorail.json ../data && cd ..
